--- a/src/public/css/pageadmin.css
+++ b/src/public/css/pageadmin.css
@@ -16,7 +16,7 @@
   width: 250px; }
 
 .admin-category.open {
-  width: 57px;
+  width: 54px;
   overflow: hidden; }
 
 .admin-nav__common.open {
@@ -88,23 +88,57 @@
   background-color: #4f5962; }
 
 .admin-category__list {
-  padding: 0 8px;
+  padding: 0 0 0 8px;
   margin-top: 20px;
   list-style: none; }
 
 .admin-category__link {
   display: flex;
   align-items: center;
-  padding: 12px 6px;
+  padding: 12px 0 12px 6px;
   font-size: 1.6rem;
   color: var(--white-color);
   text-decoration: none;
   cursor: pointer;
-  color: #c2c7d0; }
+  color: #c2c7d0;
+  position: relative;
+  border-radius: 12px 0 0 12px; }
+
+.admin-category__link.active:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translateY(-100%);
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #343a40;
+  box-shadow: 10px 10px 0 0 #f4f6f9;
+  z-index: 1; }
+
+.admin-category__link.active:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  transform: translateY(100%);
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #343a40;
+  box-shadow: 10px -10px 0 0 #f4f6f9;
+  z-index: 1; }
 
 .admin-category__link:hover {
-  background-color: rgba(255, 255, 255, 0.1);
-  color: var(--white-color); }
+  background-color: #f4f6f9;
+  color: var(--primary-color);
+  z-index: 2; }
+
+.admin-category__link.active {
+  background-color: #f4f6f9;
+  color: var(--primary-color);
+  border-radius: 12px; }
 
 .admin-category__icon {
   min-width: 21px;
@@ -116,21 +150,14 @@
 .admin-category__link p {
   margin-left: 8px; }
 
-.arrow-down,
 .icon__arrow-left {
-  margin-left: auto;
+  margin: 0 12px 0 auto;
   position: relative;
-  top: 2px; }
-
-i.icon__arrow-down {
-  display: none; }
-
-.icon__arrow-down.open {
-  display: block;
-  margin-left: auto; }
+  top: 2px;
+  transition: transform linear 0.1s; }
 
 .icon__arrow-left.open {
-  display: none; }
+  transform: rotate(-90deg); }
 
 .sub-menu__list {
   list-style: none;
@@ -138,14 +165,26 @@ i.icon__arrow-down {
   color: #c2c7d0;
   display: none; }
 
+.sub-menu__list a {
+  color: #c2c7d0;
+  text-decoration: none; }
+
 .sub-menu__item {
   padding: 12px 6px;
   display: flex;
-  cursor: pointer; }
+  cursor: pointer;
+  position: relative;
+  z-index: 2; }
 
 .sub-menu__item:hover {
-  background-color: rgba(255, 255, 255, 0.1);
-  color: var(--white-color); }
+  background-color: #f4f6f9;
+  color: var(--primary-color); }
+
+.admin-category__link.active {
+  color: var(--primary-color); }
+
+.admin-category__link.active .sub-menu__item {
+  padding: 4px 6px; }
 
 .sub-menu__item p {
   margin-left: 8px; }
