--- a/src/resources/scss/question.scss
+++ b/src/resources/scss/question.scss
@@ -50,6 +50,11 @@
   margin-top: 120px;
 }
 
+.content-blogs img {
+  width: 100% !important;
+  border-radius: 8px;
+}
+
 .question__content-title {
   position: relative;
   width: 90%;
