--- a/src/resources/scss/userManager.scss
+++ b/src/resources/scss/userManager.scss
@@ -151,7 +151,9 @@
 }
 
 .only-category.ml-12 {
-  margin-left: 22px !important;
+  margin-left: 10px !important;
+  position: relative;
+  left: 12px;
 }
 
 // phần code giao diện slide của user
