--- a/src/resources/views/admin/userManager.hbs
+++ b/src/resources/views/admin/userManager.hbs
@@ -39,7 +39,9 @@
                 <th style="width: 8%;">#</th>
                 <th style="width: 14%;">Họ và tên</th>
                 <th style="width: 14%;">Tài khoản</th>
-                <th style="width: 8%;">Email</th>
+                <th style="width: 8%;">
+                    Email
+                </th>
                 <th>Chức năng</th>
             </thead>
             <tbody>
@@ -82,28 +84,28 @@
                     <label for="" class="form-label__user">Họ và tên</label>
                     <div class="form-group__sub-div">
                         <i class="form-icon__user fas fa-user-friends"></i>
-                        <input type="text" name="fullname" id="" class="form-input__user" placeholder="Họ và tên">
+                        <input type="text" name="fullname" class="form-input__user" placeholder="Họ và tên">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="" class="form-label__user">email</label>
                     <div class="form-group__sub-div">
                         <i class="form-icon__user fas fa-user-friends"></i>
-                        <input type="text" name="email" id="" class="form-input__user" placeholder="email">
+                        <input type="text" name="email" class="form-input__user" placeholder="email">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="" class="form-label__user">Tên tài khoản</label>
                     <div class="form-group__sub-div">
                         <i class="form-icon__user fas fa-user"></i>
-                        <input type="text" name="username" id="" class="form-input__user" placeholder="Tên tài khoản">
+                        <input type="text" name="username" class="form-input__user" placeholder="Tên tài khoản">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="" class="form-label__user">Mật khẩu</label>
                     <div class="form-group__sub-div">
                         <i class="form-icon__user fas fa-lock"></i>
-                        <input type="password" name="password" id="" class="form-input__user" placeholder="Mật khẩu">
+                        <input type="password" name="password" class="form-input__user" placeholder="Mật khẩu">
                     </div>
                 </div>
 
