--- a/src/resources/views/layouts/login.hbs
+++ b/src/resources/views/layouts/login.hbs
@@ -8,10 +8,13 @@
     <link rel="stylesheet" href="/css/base.css">
     <link rel="stylesheet" href="/css/loginRegister.css">
     <link rel="stylesheet" href="/css/reponsive.css">
+    <link rel="stylesheet" href="/fonts/fontawesome-free-5.15.4-web/css/all.min.css">
 </head>
 <body>
     <div class="main">
         {{{body}}}
     </div>
+
+    <script src="/js/handleForm.js"></script>
 </body>
 </html>
