--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -6,16 +6,16 @@
         /></a>
         <ul class="header-list hide-on-tablet-mobile">
             <li class="header-list__item">
-            <a href="/" class="header-list__item-link">Trang chủ </a>
+            <a href="/" class="header-list__item-link js-active">Trang chủ </a>
             </li>
             <li class="header-list__item">
-            <a href="/news" class="header-list__item-link">Tin tức</a>
+            <a href="/news" class="header-list__item-link js-active">Tin tức</a>
             </li>
             <li class="header-list__item">
-            <a href="/question" class="header-list__item-link">Hỏi đáp</a>
+            <a href="/question" class="header-list__item-link js-active">Hỏi đáp</a>
             </li>
             <li class="header-list__item">
-            <a href="/contact" class="header-list__item-link">Liên hệ</a>
+            <a href="/contact" class="header-list__item-link js-active">Liên hệ</a>
             </li>
         </ul>
 
