--- a/src/resources/views/partials/headerAdmin.hbs
+++ b/src/resources/views/partials/headerAdmin.hbs
@@ -20,20 +20,20 @@
     <div class="road__line-logo-admin"></div>
     <ul class="admin-category__list">
       <li class="admin-category__item">
-        <a href="/homeAdmin" class="admin-category__link">
+        <a href="/homeAdmin" class="admin-category__link js-active-category">
           <i class="admin-category__icon fas fa-tachometer-alt"></i>
           <p class="only-category">Tổng quan</p>
         </a>
       </li>
       <li class="admin-category__item">
-        <a href="/homeAdmin/userManager" class="admin-category__link">
+        <a href="/homeAdmin/userManager" class="admin-category__link js-active-category">
           <i class="admin-category__icon fas fa-users"></i>
           <p class="only-category">Quản lý người dùng</p>
         </a>
       </li>
       <li class="admin-category__item">
-        <a href="/homeAdmin/managerPost" class="admin-category__link">
-          <i class="admin-category__icon fas fa-portrait icon-post"></i>
+        <a href="/homeAdmin/managerPost" class="admin-category__link js-active-category">
+          <i class="fas fa-vr-cardboard"></i>
           <p class="only-category">Quản lý bài viết</p>
         </a>
       </li>
@@ -47,17 +47,12 @@
 
       <li class="admin-category__item">
         <div class="admin-category__link js-admin-category__link">
-          <i class="admin-category__icon fas fa-comment"></i>
-
+          <i class="fas fa-cookie-bite"></i>
           <p class="only-category">Quản lý giao diện user</p>
           <i class="icon__arrow-left fas fa-chevron-left"></i>
-          <i class="icon__arrow-down fas fa-chevron-down"></i>
         </div>
         <ul class="sub-menu__list">
-          <a
-            href="/homeAdmin/handleUser"
-            style="color: rgb(194, 199, 208); text-decoration: none"
-          >
+          <a href="/homeAdmin/handleUser"class="js-active-category">
             <li class="sub-menu__item">
               <i class="icon-circle fas fa-circle-notch"></i>
               <p class="only-category">CRUD slideHome</p>
