--- a/src/resources/views/user/home.hbs
+++ b/src/resources/views/user/home.hbs
@@ -95,6 +95,34 @@
                         </div>
                     </li>
                 </div>
+                <div class="col l-4 m-6 c-12">
+                    <li>
+                        <div
+                            class="img" style="
+                            background-image: url('https://media.hswstatic.com/eyJidWNrZXQiOiJjb250ZW50Lmhzd3N0YXRpYy5jb20iLCJrZXkiOiJnaWZcL0Jhc3MtUmVldmVzLTIuanBnIiwiZWRpdHMiOnsicmVzaXplIjp7IndpZHRoIjo2MDAsImhlaWdodCI6MzM3fX19');
+                            "
+                        >
+                            <span>
+                            Bass Reeves: Baddest Marshal in the Old West, Original
+                            'Lone Ranger'
+                            </span>
+                        </div>
+                    </li>
+                </div>
+                <div class="col l-4 m-6 c-12">
+                    <li>
+                        <div
+                            class="img" style="
+                            background-image: url('https://media.hswstatic.com/eyJidWNrZXQiOiJjb250ZW50Lmhzd3N0YXRpYy5jb20iLCJrZXkiOiJnaWZcL0Jhc3MtUmVldmVzLTIuanBnIiwiZWRpdHMiOnsicmVzaXplIjp7IndpZHRoIjo2MDAsImhlaWdodCI6MzM3fX19');
+                            "
+                        >
+                            <span>
+                            Bass Reeves: Baddest Marshal in the Old West, Original
+                            'Lone Ranger'
+                            </span>
+                        </div>
+                    </li>
+                </div>
                 
 
                 <!-- end row -->
