--- a/src/resources/views/user/system.hbs
+++ b/src/resources/views/user/system.hbs
@@ -12,7 +12,7 @@
                             <div class="InputField_fieldContent">
                                 <span class="InputField_fieldContent__name">Họ tên</span>
                                 <span class="InputField_description">
-                                    <input type="text" value="{{fullname}}" class="InputField_fieldContentInput"></input>
+                                    <input type="text" value="{{fullname}}" class="InputField_fieldContentInput" disabled></input>
                                     {{!-- <span>
                                         Tên của bạn xuất hiện trên trang cá nhân và bên cạnh các bình luận của bạn.
                                     </span> --}}
@@ -32,7 +32,7 @@
                             <div class="InputField_fieldContent">
                                 <span class="InputField_fieldContent__name">Email</span>
                                     <span class="InputField_description">
-                                        <input type= "text" value = "{{email}}" class="InputField_fieldContentInput"></input>
+                                        <input type= "text" value = "{{email}}" class="InputField_fieldContentInput" disabled></input>
                                     </span>
                             </div>
                             <div class="InputField_fieldBtn">
