--- a/src/resources/scss/headerWriteBlog.scss
+++ b/src/resources/scss/headerWriteBlog.scss
@@ -187,6 +187,7 @@
 
 .right {
   display: flex;
+  margin-left: 100px;
 }
 
 .header-icon__bell {
@@ -404,7 +405,7 @@
 
 .nav-bar-tablet-mobile {
   position: fixed;
-  z-index: 10;
+  z-index: 100;
   top: 0;
   right: 0;
   bottom: 0;
@@ -518,6 +519,11 @@
   font-size: 1.4rem;
   font-weight: 700;
   cursor: pointer;
+  height: 30px;
+  z-index: 100;
+  position: fixed;
+  top: 16px;
+  right: 180px;
 }
 
 // content
