--- a/src/resources/scss/loginRegister.scss
+++ b/src/resources/scss/loginRegister.scss
@@ -21,7 +21,7 @@
 }
 
 .form-login {
-  height: 600px;
+  height: 640px;
   display: flex;
   border-radius: 12px;
   overflow: hidden;
@@ -115,6 +115,37 @@
   position: relative;
 }
 
+.form-group.valid .form-message {
+  position: relative;
+  font-size: 1.2rem;
+  color: red;
+  margin-top: 4px;
+}
+
+.form-group.valid .form-input {
+  outline: 1px solid rgb(215, 118, 141);
+  background-color: rgb(255, 231, 237);
+  border: none;
+}
+
+.form-group.valid .form-label-2 {
+  top: 35%;
+}
+
+.icon-warning {
+  font-size: 1.4rem;
+  color: rgb(245, 57, 86);
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  display: none !important;
+}
+
+.form-group.valid .icon-warning {
+  display: block !important;
+}
+
 .form-label {
   font-size: 1.4rem;
   color: #babfd9;
@@ -171,6 +202,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .btn-register__container .no-accout {
@@ -227,4 +259,177 @@
   font-size: 1.4rem;
   font-weight: 700;
   color: #858aa9;
+}
+
+.show-notification {
+  display: none;
+  margin-top: 8px;
+  font-size: 1.4rem;
+  color: var(--white-color);
+  text-align: center;
+  padding: 8px 0;
+  border-radius: 24px;
+  font-weight: 700;
+}
+
+.show-notification.show-notification--success {
+  background-color: #42b656;
+}
+
+.show-notification.show-notification--failed {
+  background-color: #f4696a;
+}
+
+// loading
+.load-wrapp {
+  float: left;
+  width: 100px;
+  height: 100px;
+  margin: 0 10px 10px 0;
+  padding: 40px 20px 20px;
+  border-radius: 5px;
+  text-align: center;
+  position: absolute;
+  z-index: 10;
+  display: none;
+}
+
+.line {
+  display: inline-block;
+  width: 11px;
+  height: 11px;
+  border-radius: 15px;
+  background-color: var(--white-color);
+}
+
+.load-3 .line:nth-last-child(1) {
+  animation: loadingC 0.6s 0.1s linear infinite;
+}
+.load-3 .line:nth-last-child(2) {
+  animation: loadingC 0.6s 0.2s linear infinite;
+}
+.load-3 .line:nth-last-child(3) {
+  animation: loadingC 0.6s 0.3s linear infinite;
+}
+
+@keyframes loadingC {
+  0 {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(0, 8px);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
+
+// login successfull
+
+.check-container {
+  width: 3rem;
+  height: 4rem;
+  position: absolute;
+  top: 100%;
+  transform: translateY(-80%);
+  display: none;
+
+  .check-background {
+    width: 100%;
+    height: calc(100% - 1.25rem);
+    background: linear-gradient(to bottom right, #5de593, #41d67c);
+    box-shadow: 0px 0px 0px 65px rgba(255, 255, 255, 0.25) inset,
+      0px 0px 0px 65px rgba(255, 255, 255, 0.25) inset;
+    transform: scale(0.84);
+    border-radius: 50%;
+    animation: animateContainer 0.75s ease-out forwards 0.75s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+
+    svg {
+      width: 65%;
+      transform: translateY(0.25rem);
+      stroke-dasharray: 80;
+      stroke-dashoffset: 80;
+      animation: animateCheck 0.35s forwards 1.25s ease-out;
+    }
+  }
+
+  .check-shadow {
+    bottom: calc(-15% - 5px);
+    left: 0;
+    border-radius: 50%;
+    background: radial-gradient(
+      closest-side,
+      rgba(73, 218, 131, 1),
+      transparent
+    );
+    animation: animateShadow 0.75s ease-out forwards 0.75s;
+  }
+}
+
+@keyframes animateContainer {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+    box-shadow: 0px 0px 0px 65px rgba(255, 255, 255, 0.25) inset,
+      0px 0px 0px 65px rgba(255, 255, 255, 0.25) inset;
+  }
+  25% {
+    opacity: 1;
+    transform: scale(0.9);
+    box-shadow: 0px 0px 0px 65px rgba(255, 255, 255, 0.25) inset,
+      0px 0px 0px 65px rgba(255, 255, 255, 0.25) inset;
+  }
+  43.75% {
+    transform: scale(1.15);
+    box-shadow: 0px 0px 0px 43.334px rgba(255, 255, 255, 0.25) inset,
+      0px 0px 0px 65px rgba(255, 255, 255, 0.25) inset;
+  }
+  62.5% {
+    transform: scale(1);
+    box-shadow: 0px 0px 0px 0px rgba(255, 255, 255, 0.25) inset,
+      0px 0px 0px 21.667px rgba(255, 255, 255, 0.25) inset;
+  }
+  81.25% {
+    box-shadow: 0px 0px 0px 0px rgba(255, 255, 255, 0.25) inset,
+      0px 0px 0px 0px rgba(255, 255, 255, 0.25) inset;
+  }
+  100% {
+    opacity: 1;
+    box-shadow: 0px 0px 0px 0px rgba(255, 255, 255, 0.25) inset,
+      0px 0px 0px 0px rgba(255, 255, 255, 0.25) inset;
+  }
+}
+
+@keyframes animateCheck {
+  from {
+    stroke-dashoffset: 80;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes animateShadow {
+  0% {
+    opacity: 0;
+    width: 100%;
+    height: 15%;
+  }
+  25% {
+    opacity: 0.25;
+  }
+  43.75% {
+    width: 40%;
+    height: 7%;
+    opacity: 0.35;
+  }
+  100% {
+    width: 85%;
+    height: 15%;
+    opacity: 0.25;
+  }
 }
