--- a/src/resources/views/admin/trashViewPosts.hbs
+++ b/src/resources/views/admin/trashViewPosts.hbs
@@ -28,14 +28,14 @@
                         <th>
                             <div style="display: grid; grid-template-columns: 1fr 1fr;padding: 0 12px; grid-column-gap: 12px; grid-row-gap: 8px;">
                                 <form action="/homeAdmin/{{this._id}}/restore?_method=PATCH" method="post">
-                                    <button class="btn btn-update-viewPosts">
+                                    <button class="btn btn-update" style="min-width: 150px; border-radius: 8px;">
                                         <i class="far fa-trash-alt"></i>
                                         <span>Khôi phục</span>
                                     </button>
                                 </form>
                                 
-                                <form action="/homeAdmin/{{this._id}}/force?_method=DELETE" method="post">
-                                    <button class="btn btn-delete-viewPosts">
+                                <form action="/homeAdmin/{{this._id}}/force?_method=DELETE" method="post" style="position: relative; top: 3px">
+                                    <button class="btn btn-delete" style="min-width: 150px; border-radius: 8px;">
                                         <i class="far fa-trash-alt"></i>
                                         <span>Xóa vĩnh viễn</span>
                                     </button>
