--- a/src/resources/views/partials/headerBlogs.hbs
+++ b/src/resources/views/partials/headerBlogs.hbs
@@ -14,11 +14,6 @@
         <!-- show when login -->
         <div class="right">
             <div class="header-pc__avatar">
-                <form action="">
-                    <div class="btn-publish">
-                        <button type="submit" class="button-submit">xuất bản</button>
-                    </div>
-                </form>
                 <!-- hide bell when no login on tablet mobile: header-icon-tablet-mobile-pc--no-login-->
                 <div class="header-icon-tablet-mobile-pc">
                     <i class="header-icon__bell far fa-bell">
@@ -101,7 +96,7 @@
                         </li>
 
                         <li class="menu-icon-down__item js-page-manager">
-                        <a href="" class="menu-icon-down__item-link">
+                        <a href="/logout" class="menu-icon-down__item-link">
                             Đăng Xuất
                         </a>
                         </li>
@@ -111,70 +106,87 @@
         </div>
     </nav>
 
-    <!-- navbar on tablet mobie -->
+        <!-- navbar on tablet mobie -->
     <input type="checkbox" id="check" class="checkk" hidden />
     <label for="check" class="overlay"></label>
     <nav class="nav-bar-tablet-mobile">
-    <label for="check" class="close-btn fas fa-times"></label>
+        <label for="check" class="close-btn fas fa-times"></label>
 
-    <!-- login success: header-tablet-mobile__avatar--no-login-->
-    <div class="header-tablet-mobile__avatar">
-        <img
-        src="/img/anh.png"
-        alt=""
-        class="header-tablet-mobile__img"
-        />
-        <span class="header-tablet-mobile__name">Quốc Huy</span>
-        <img
-        src="/img/logo1.png"
-        alt=""
-        class="header__logo-tablet-mobile"
-        />
-    </div>
-    <ul class="header-tablet-mobile-list">
-        <li
-        class="header-tablet-mobile-list__item header-list__item-active"
-        >
-        <a href="/" class="header-tablet-mobile-list__item-link">
-            <i class="header-tablet-mobile__icon fas fa-home"></i>
-            Trang chủ
-        </a>
-        </li>
-        <li class="header-tablet-mobile-list__item">
-        <a href="/news" class="header-tablet-mobile-list__item-link">
-            <i
-            class="header-tablet-mobile__icon fas fa-envelope-open"
-            ></i>
-            Tin tức
-        </a>
-        </li>
-        <li class="header-tablet-mobile-list__item">
-        <a href="/question" class="header-tablet-mobile-list__item-link">
-            <i class="header-tablet-mobile__icon fas fa-book-open"></i>
-            Hỏi đáp
-        </a>
-        </li>
-        <li class="header-list-tablet-mobile__item">
-        <a href="/contact" class="header-tablet-mobile-list__item-link">
-            <i class="header-tablet-mobile__icon fas fa-pen-nib"></i>
-            Liên hệ
-        </a>
-        </li>
-    </ul>
-    <div class="form-tablet-mobile-login-register">
-        <div class="form-tablet-mobile js-login">
-        <i
-            class="header-tablet-mobile__icon-login fas fa-sign-in-alt"
-        ></i>
-        Đăng nhập
+        {{#if loggedIn}}
+        <!-- login success: header-tablet-mobile__avatar--no-login-->
+        <div class="header-tablet-mobile__avatar header-tablet-mobile__avatar--no-login">
+            <img
+            src="/img/anh.png"
+            alt=""
+            class="header-tablet-mobile__img"
+            />
+            <span class="header-tablet-mobile__name">{{fullname}}</span>
+            
         </div>
-        <div class="form-tablet-mobile js-register">
-        <i
-            class="header-tablet-mobile__icon-register fas fas fa-user"
-        ></i>
-        Đăng kí
+        <div class="mt-104">
+        {{else}}
+            <div class="header-tablet-mobile__avatar">
+                <img
+                    src="/img/logo1.png"
+                    alt=""
+                    class="header__logo-tablet-mobile"
+                    />
+            </div>
+            <div class="form-tablet-mobile-login-register">
+                <a href="/login" class="form-tablet-mobile js-login" style="display: inline-block;">
+                <i
+                    class="header-tablet-mobile__icon-login fas fa-sign-in-alt"
+                ></i>
+                Đăng nhập
+                </a>
+            </div>
+        {{/if}}
+            <ul class="header-tablet-mobile-list">
+                <li
+                class="header-tablet-mobile-list__item header-list__item-active"
+                >
+                <a href="/" class="header-tablet-mobile-list__item-link">
+                    <i class="header-tablet-mobile__icon fas fa-home"></i>
+                    Trang chủ
+                </a>
+                </li>
+                <li class="header-tablet-mobile-list__item">
+                <a href="/news" class="header-tablet-mobile-list__item-link">
+                    <i
+                    class="header-tablet-mobile__icon fas fa-envelope-open"
+                    ></i>
+                    Tin tức
+                </a>
+                </li>
+                <li class="header-tablet-mobile-list__item">
+                <a href="/question" class="header-tablet-mobile-list__item-link">
+                    <i class="header-tablet-mobile__icon fas fa-book-open"></i>
+                    Hỏi đáp
+                </a>
+                </li>
+                <li class="header-list-tablet-mobile__item">
+                <a href="/contact" class="header-tablet-mobile-list__item-link">
+                    <i class="header-tablet-mobile__icon fas fa-pen-nib"></i>
+                    Liên hệ
+                </a>
+                </li>
+                {{#if loggedIn}}
+                    <li class="header-list-tablet-mobile__item">
+                    <a href="writeBlogs" class="header-tablet-mobile-list__item-link">
+                        <i class="header-tablet-mobile__icon fas fa-pen-nib"></i>
+                        Viết blogs
+                    </a>
+                    </li>
+                    <li class="header-list-tablet-mobile__item">
+                    <a href="/logout" class="header-tablet-mobile-list__item-link">
+                        <i class="header-tablet-mobile__icon fas fa-pen-nib"></i>
+                        Đăng xuất
+                    </a>
+                    </li>
+                {{/if}}
+            </ul>
         </div>
-    </div>
+        
     </nav>
 
     <!-- </div> -->
