--- a/src/resources/views/user/writeBlogs.hbs
+++ b/src/resources/views/user/writeBlogs.hbs
@@ -1,11 +1,14 @@
 <div class="content-writeBlog" style="position:relative; top: 100px;">
-    <form action="">
+    <form action="/blogusers" method="post">
         <div class="form-group">
             {{!-- <label for="">Tên tiêu đề</label> --}}
-            <input type="text" name="" id="" class="form-input" placeholder="Tiêu đề">
+            <input type="text" name="username" value="{{fullname}}" id="" class="form-input" placeholder="Tiêu đề" hidden>
+            <input type="text" name="image" id="" class="form-input" placeholder="Hình ảnh" style="border-bottom: 1px solid black;" required>
+            <input type="text" name="tittle" id="" class="form-input" placeholder="Tiêu đề" required>
         </div>
 
-        <textarea name="description" id="description"></textarea>
+        <textarea name="description" id="description" required></textarea>
+        <button type="submit" class="button-submit">Xuất bản</button>
     </form>
 </div>
 
